[upd] fixed slider gaps

--- a/src/blocks/slider.sass
+++ b/src/blocks/slider.sass
@@ -103,8 +103,6 @@
         height: 20rem
         margin-bottom: 0rem
 
-
-
     .slider__item
         height: 100%
         position: relative
@@ -114,7 +112,10 @@
         
 
         img
-            object-fit: cover
+            height: 17.2rem
+            width: 52rem
+            object-fit: contain
+            // transform: scale(0.5, 0.5)
             object-position: -8.3rem
         
 
